criando varios componentes

--- a/angularSpotify/src/assets/styles/variables.scss
+++ b/angularSpotify/src/assets/styles/variables.scss
@@ -1,2 +1,9 @@
-$color-back-ground: #707a6d;
+$color-back-ground: rgb(219, 236, 201);
 $default-color: #37AB00;
+$white: rgb(243, 255, 236);
+$shadow-menu: #00000056;
+
+$black-transparent-30: #0000004D;
+$black-transparent-20: #00000033;
+$black-transparent-03: #00000008;
+$black-transparent-70: #000000b3;
