--- a/angularSpotify/src/styles.scss
+++ b/angularSpotify/src/styles.scss
@@ -20,3 +20,37 @@ html, body{
     align-items: center;
   }
 }
+
+.title{
+  color: $default-color;
+  display: block;
+  font-weight: 700;
+
+  &-bg{
+    @extend.title;
+    font-size: 2.2rem;
+  }
+
+  &-md {
+    @extend.title;
+    font-size: 1.4rem;
+  }
+}
+
+.mt {
+  @for $i from 1 to 10{
+    &-#{ $i }{
+      margin-top: #{ $i}vh;
+    }
+  }
+}
+
+.p20{
+  padding: 20px;
+}
+
+.card{
+  box-shadow: 0px 0px 15px $black-transparent-03;
+  background-color: $white;
+  border-radius: 10px;
+}
